--- a/css/styles.css
+++ b/css/styles.css
@@ -1,57 +1,298 @@
 :root {
   --brand-color-blue: #2196f3;
   --brand-color-black: #212121;
-  --brand-color-grey: #757575;
-  --brand-color-white: #fff;
+  --brand-color-gray: #757575;
+  --brand-color-white: #fff;  
+  --brand-background-gray: #2f303a;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', 'Raleway', sans-serif;
   color: var(--brand-color-black);
+  background-color: #e5e5e5;
+}
+
+.wrapper {
+  width: 1600px;
+  margin: auto;
+  background-color: var(--brand-color-white);  
+}
+
+.header {
+  height: 80px;
+  border-bottom: #ececec solid 1px;
+  padding: 0 215px;
+}
+
+.main {
+  margin: 94px 215px 0px 215px;
+}
+
+.footer {
+  padding: 60px 0px 60px 215px;
+  background-color: var(--brand-background-gray);
+}
+
+.list {
+  list-style-type: none;
 }
 
 .logo {
-    font-family: 'Raleway', sans-serif;    
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: #000;
+  margin-top: 24px;
+  margin-right: 93px;
+  float: left;
 }
 
-.nav-a {
-  text-decoration: none;
-  font-size: 14px;
+.brand-color-blue {
+  color: var(--brand-color-blue);
+}
+
+.nav-list {
+  float: left;
+  margin-top: 32px;
+}
+
+.nav-item {
+  display: inline;
+  margin-right: 46px;
+}
+
+.nav-link {
   font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-decoration: none;
   color: var(--brand-color-black);
 }
 
-.nav-a:hover,
-.nav-a:focus {
+.nav-link:hover,
+.nav-link:focus,
+.nav-link:active {
   color: var(--brand-color-blue);
 }
 
-.contact-a {  
-  text-decoration: none;
-  font-size: 14px;
+.contact-list {
+  float: left;
+  margin-top: 32px;
+  margin-left: 268px;
+}
+
+.contact-item {
+  display: inline;
+  margin-right: 50px;
+}
+
+.contact-link {
   font-weight: 500;
-  color: var(--brand-color-grey);
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--brand-color-gray);
 }
 
-.contact-a:hover,
-.contact-a:focus {
+.contact-link:hover,
+.contact-link:focus,
+.contact-link:active {
   color: var(--brand-color-blue);
+}
+
+.section-h1 {
+  height: 600px;
+  background-color: var(--brand-background-gray);
+  border: 1px solid var(--brand-background-gray);
+  text-align: center;  
+}
+
+.section-h1-div {
+  margin: 200px 452px 0px 452px;  
+}
+
+.section-h1-title {  
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--brand-color-white);  
+}
+
+.section-h1-btn {
+  border: none;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  width: 200px;
+  height: 50px;
+  color: var(--brand-color-white);
+  background-color: var(--brand-color-blue);
+  cursor: pointer; 
+}
+
+.section-h1-btn:hover,
+.section-h1-btn:focus,
+.section-h1-btn:active {
+  color: var(--brand-color-blue);
+  background-color: var(--brand-color-white);
+}
+
+  .descript-item {
+    display: inline;
+  }
+
+.descript-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;  
+}
+
+.descript-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  width: 270px;
+  height: 75px;
+  left: 215px;
+  top: 800px;
+  color: var(--brand-color-gray);
+}
+
+.section-h2-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  margin: 0;
+  margin-bottom: 50px;
+  padding: 0;
+}
+
+.section-h3-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.about-us {
+  margin-top: 94px;
+  text-align: center;
+}
+
+.about-us-item {
+  display: inline;
+}
+
+.team {
+  background-color: #f5f4fa;
+  border: 1px solid #f5f4fa;
+  margin-top: 94px;
+  padding-top: 94px;
+  text-align: center;  
+}
+
+.team-item {
+  background-color: var(--brand-color-white);
+}
+
+.team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--brand-color-gray);
+}
+
+.portf-menu-list {
+  width: 580px;
+  margin: auto;
+}
+
+.portf-menu-item {
+  display: inline;
+}
+
+.btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  height: 38px;
+  padding: 0px 20px 0px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+  cursor: pointer;
 }
 
 .btn:hover,
-.btn:focus {
+.btn:focus,
+.btn:active {
   background-color: var(--brand-color-blue);
   color: var(--brand-color-white);
 }
 
-.footer-link {
-  text-decoration: none;
-  font-style: normal;
-  font-size: 14px;
-  font-weight: 400;
+.project-h3-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2.0;
+  letter-spacing: 0.06em;
 }
 
-.footer-link:hover,
-.footer-link:focus {
-  color: var(--brand-color-blue);
+.projects-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  color: var(--brand-color-gray);
+}
+
+.footer .logo {
+  /* font-family: 'Raleway', sans-serif;
+  font-size: 26px; */
+  color: var(--brand-color-white);
+  float: none;
+}
+
+.address-list {
+  padding-left: 0px;
+}
+
+.address-item {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  color: var(--brand-color-white);
+}
+
+.address-link {
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+}
+
+.address-link:hover,
+.address-link:focus,
+.address-link:active {
+  color: var(--brand-color-white);
+}
+
+.address-item span {
+  text-decoration: underline;
 }
