--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ img {
   max-width: 1200px;
   margin: auto;
   padding: 0 15px;
+  /* border: 1px dashed #000; */
 }
 
 /* .wrapper {
@@ -36,6 +37,13 @@ img {
   margin: auto;
   background-color: var(--brand-color-white);  
 } */
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  gap: 30px;
+}
 
 .header {
   padding-top: 24px;
@@ -73,7 +81,7 @@ img {
 } */
 
 .list {
-  list-style-type: none;
+  list-style-type: none;  
 }
 
 .logo {
@@ -84,7 +92,7 @@ img {
   letter-spacing: 0.03em;
   text-decoration: none;
   color: #000;
-  margin-right: 93px;  
+  margin-right: 93px;
 }
 
 .brand-color-blue {
@@ -210,12 +218,14 @@ img {
 
 .descript-item {
   width: 270px;
-  display: inline-block;
+  /* display: inline-block;
   margin-right: 25px;
-  /* margin: 0px 20px 0px 0px ; */
-  /* padding-left: 0;
-  padding-right: 0; */
-  /* display: inline; */
+
+
+  margin: 0px 20px 0px 0px ;
+  padding-left: 0;
+  padding-right: 0;
+  display: inline; */
 }
 
 .descript-item:last-child {
@@ -269,21 +279,21 @@ img {
   margin-bottom: 94px;
 }
 
-.about-us-item {
+/* .about-us-item {
   display: inline-block;
   margin-right: 20px;
-}
+} */
 
-.about-us-item:last-child {
+/* .about-us-item:last-child {
   margin-right: 0;
-}
+} */
 
 .team {
   background-color: #f5f4fa;  
   padding-top: 94px;
   padding-bottom: 94px;
-  margin-bottom: 0px;
-  text-align: center;  
+  /* margin-bottom: 0px; */
+  text-align: center;
 }
 
 .team-item {
@@ -291,13 +301,13 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   max-width: 270px;
-  display: inline-block;
-  margin-right: 25px;
+  /* display: inline-block; */
+  /* margin-right: 25px; */
 }
 
-.team-item:last-child {
+/* .team-item:last-child {
   margin-right: 0;
-}
+} */
 
 .team-text {
   font-size: 16px;
@@ -309,7 +319,7 @@ img {
 }
 
 .team-photo {
-  margin-bottom: 30px;
+  margin-bottom: 30px;  
 }
 
 .team-figcaption {
@@ -328,7 +338,7 @@ img {
 }
 
 .portf-menu-item {
-  display: inline;  
+  display: inline;
 }
 
 .btn {
@@ -358,7 +368,7 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
   row-gap: 30px;
-  column-gap: 20px;
+  column-gap: 30px;
 }
 
 .project-figcaption {
