--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 24px;
+  padding: 24px 0;
 }
 
 .navigation-logo {
