--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ img {
   overflow: hidden;
 } */
 
-.visually-hidden:not(:focus):not(:active) {
+/* .visually-hidden:not(:focus):not(:active) {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
   height: 1px;
@@ -70,8 +70,20 @@ img {
   position: absolute;
   white-space: nowrap;
   width: 1px;
-}
+} */
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /*Header Styles*/
 
 .page-header {
