--- a/css/styles.css
+++ b/css/styles.css
@@ -90,8 +90,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px;
-  padding: 24px 0;
+  margin-right: 76px;  
 }
 
 .logo-span {
@@ -109,6 +108,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   cursor: pointer;
+  padding: 24px 0;
+  display: inline-block;
 }
 
 .address {
@@ -123,7 +124,7 @@ img {
 .address-link {
   color: var(--text-color);
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
   cursor: pointer;
@@ -226,7 +227,8 @@ img {
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
-  margin: auto auto 48px auto;  
+  margin: auto auto 48px auto;
+  text-align: center
 }
 
 .main-headline-button {
