--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
@@ -20,114 +19,33 @@ body {
   --modal_background-color: #FCFCFC;
 }
 
-/*Common Styles*/
-
-* {
-  margin: 0px;
-  padding: 0px;
-}
-
-.container {
-  width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-img {
-  display: block;
-}
-
 .list {
   list-style: none;
-  display: flex;
-  gap: 24px;
-  margin: 0;
-  justify-content: center;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-/*Header Styles*/
-
-.page-header {
-  border-bottom: 1px solid #e7e9fc;
-}
-
-.container-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.navigation-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  
 }
 
 .navigation-logo {
   color: var(--primary_brand-color);
   font-family: 'Raleway', sans-serif;
-  text-decoration: none;
+  font-weight: 700;
   font-size: 18px;
-  font-weight: 800;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px;  
 }
 
 .logo-span {
   color: var(--dark-color);
 }
 
-.navigation-page {
-  gap: 40px;
-}
-
 .navigation-link {
   color: var(--dark-color);
-  font-size: 16px;
   font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  cursor: pointer;
-  padding: 24px 0;
-  display: inline-block;
-}
-
-.address {
-  font-style: normal;
-}
-
-.address-list {
-  gap: 40px;
-  margin-right: 0px;
-}
-
-.address-link {
-  color: var(--text-color);
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.5;
-  letter-spacing: 0.02em;
-  cursor: pointer;
+  letter-spacing: 0.02em;  
+}
+
+.link {
   text-decoration: none;
 }
 
@@ -136,224 +54,140 @@ img {
   color: var(--pressed_state-color);
 }
 
-.address-link:hover,
-.address-link:focus {
-  color: var(--pressed_state-color);
+.address {
+  font-style: normal;
 }
 
-/*Portfolio Section no.1 Styles*/
-
-.section-project {
-  padding-top: 96px;
-  padding-bottom: 120px;
-}
-
-.filters-list {
-  margin-bottom: 72px;
-}
-
-.filter-button {
-  color: var(--primary_brand-color);
-  background-color: #F4F4FD;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  cursor: pointer;
-  padding: 12px 24px;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
-}
-
-.filter-button:hover,
-.filter-button:focus {
-  color: #FFFFFF;
-  background-color: #404BBF;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  cursor: pointer;
-  border: 1px solid transparent;
-}
-
-.project-list {
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-
-.project-point {
-  flex-basis: calc((100% - 48px) / 3);
-}
-
-.portfolio-section-container {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-
-.project-tittle {
-  color: var(--dark-color);
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-bottom: 8px;
-}
-
-.project-text {
+.address-link {
   color: var(--text-color);
   font-size: 16px;
+  /* font-weight: 500; */
   line-height: 1.5;
   letter-spacing: 0.02em;
+  /* cursor: pointer;
+  text-decoration: none; */
 }
 
-/*Studio Hero Section no.1 Styles*/
+.address-link:hover,
+.address-link:focus {
+  color: var(--pressed_state-color)
+}
+
+/* section no1 hero section */
 
 .hero-section {
   background-color: var(--hero_background-color);
-  padding: 188px 0px;
 }
 
-.main-headline {
+.hero-section-title {
   color: #FFF;
   font-size: 56px;
-  font-weight: 700;
   line-height: 1.07;
+  text-align: center;
   letter-spacing: 0.02em;
-  max-width: 496px;
-  margin: auto auto 48px auto;
-  text-align: center
+  /* font-weight: 700; */
 }
 
-.main-headline-button {
-  color: #FFF;
-  background-color: #4D5AE5;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+.hero-section-button {
+  background-color: var(--primary_brand-color);
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  display: block;
-  min-width: 169px;
-  height: 56px;
-  border: none;
-  border-radius: 4px;
+  color: #FFF;
   cursor: pointer;
-  margin: auto auto auto auto;
 }
 
-.main-headline-button:hover,
-.main-headline-button:focus {
+.hero-section-button:hover,
+.hero-section-button:focus {
   background-color: var(--pressed_state-color);
 }
 
-/*Studio Objective Section no.2 Styles*/
+/* section no2 our strong sides */
 
-.section-objectives {
-  padding: 120px 0;
-}
-
-.list-point-objectives {
-  flex-basis: calc((100% - 72px) / 4);
-}
-
-.sub-headline {
+.sides-section-heading {
   color: var(--dark-color);
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-}
-
-.sub-headline-objectives {
-  color: var(--dark-color);
-  font-size: 20px;
   font-weight: 500;
+  font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.4px;
-  margin-bottom: 8px;
+  letter-spacing: 0.02em;
 }
 
-.text-objectives {
+.sides-section-text {
   color: var(--text-color);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
-/*Studio Doing Section no.3 Styles*/
-
-.doing-section {
-  background-color: var(--white_background-color);
-  padding-bottom: 120px;
-}
-
-.list-point-doing {
-  flex-basis: calc((100% - 48px) / 3);
-}
-
-/*Studio Team Section no.4 Styles*/
+/* section no3 our team */
 
 .team-section {
-  background: #F4F4FD;
-  padding: 120px 0;
+  background-color: var(--light-color);
 }
 
-.list-team {
-  background-color: #FFFFFF;
-  flex-basis: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.name-team {
-  padding: 32px 0px;
-}
-
-.team-peaple-name {
+.team-section-title {
   color: var(--dark-color);
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.4px;
+  /* font-weight: 500; */
+  font-size: 36px;
+  line-height: 1.11;
   text-align: center;
-  margin-bottom: 8px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 
-.team-position {
+.team-section-list {
+  background-color: var(--white_background-color);
+}
+
+.team-section-people-title {
+  color: var(--dark-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.team-section-people-text {
   color: var(--text-color);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
 }
 
-/*Studio Footer Styles*/
+/* section no4 our portfolio */
 
-.footer {
+/* .portfolio-section {
+  
+}
+
+.portfolio-section-title {
+
+}
+
+.portfolio-section-list {
+
+} */
+
+.portfolio-section-our-title {
+  color: var(--dark-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.portfolio-section-our-text {
+  color: var(--text-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+/* footer */
+
+footer {
   background-color: var(--hero_background-color);
-  padding: 100px 0;    
-}
-
-.footer-navigation-logo {
-  color: var(--primary_brand-color);
-  font-family: 'Raleway', sans-serif;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 800;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  display: inline-block;
-  margin-bottom: 16px;
 }
 
 .logo-footerspan {
@@ -362,8 +196,7 @@ img {
 
 .footer-text {
   color: var(--light-color);
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
-  max-width: 264px;
 }
