--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,42 @@ body {
   --modal_background-color: #FCFCFC;
 }
 
-.list {
-  list-style: none;
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 img {
   display: block;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.link {
+  text-decoration: none;
+}
+
+/*Header Styles*/
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.container-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigation-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navigation-logo {
@@ -52,10 +82,6 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;  
-}
-
-.link {
-  text-decoration: none;
 }
 
 .navigation-link:hover,
