--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,11 @@ img {
   justify-content: space-between;
 }
 
-.navigation-list {
+/* .navigation-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
+} */
 
 .navigation-logo {
   color: var(--primary_brand-color);
