--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,11 @@ img {
   justify-content: space-between;
 }
 
-/* .navigation-list {
+.navigation-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
-} */
+}
 
 .navigation-logo {
   color: var(--primary_brand-color);
@@ -70,6 +70,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .logo-span {
