--- a/css/styles.css
+++ b/css/styles.css
@@ -124,24 +124,33 @@ img {
 
 .hero-section {
   background-color: var(--hero_background-color);
+  padding: 188px 0;
 }
 
 .hero-section-title {
   color: #FFF;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
+  max-width: 496px;
+  /* margin: auto auto 48px auto; */
+  text-align: center;
   /* font-weight: 700; */
 }
 
 .hero-section-button {
+  color: #FFF;
   background-color: var(--primary_brand-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #FFF;
+  display: block;
+  /* margin: auto auto auto auto; */
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
 }
 
