--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,25 @@ img {
 
 /* section no2 our strong sides */
 
+.sides-section {
+  padding: 120px 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
+
 .sides-section-heading {
   color: var(--dark-color);
   font-weight: 500;
