--- a/css/styles.css
+++ b/css/styles.css
@@ -213,10 +213,16 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .team-section-list {
   background-color: var(--white_background-color);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-section-card {
+  padding: 32px 16px;
 }
 
 .team-section-people-title {
