--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ img {
 
 .team-section-list {
   background-color: var(--white_background-color);
+  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -231,6 +232,8 @@ img {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
 }
 
 .team-section-people-text {
@@ -238,6 +241,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 
 /* section no4 our portfolio */
