--- a/css/styles.css
+++ b/css/styles.css
@@ -266,12 +266,19 @@ img {
   width: calc((100% - 48px) / 3);
 }
 
+.portfolio-section-card {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .portfolio-section-our-title {
   color: var(--dark-color);
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .portfolio-section-our-text {
@@ -279,6 +286,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 /* footer */
